--- a/css/style.css
+++ b/css/style.css
@@ -494,7 +494,7 @@ footer{
 	
 	#work{
 		width:460px;	
-}
+	}
 
 	.work-center{}
 
@@ -520,7 +520,7 @@ footer{
 	}
 
 	.work-center{
-		width:190px;
+		width:100%;
 	}
 
 	.item{
