--- a/files/work/11/PUK/css/main.css
+++ b/files/work/11/PUK/css/main.css
@@ -11,8 +11,10 @@ body{
 }
 
 #borderBox{
-    width:                      360px;
-    height:                     640px;
+    max-width:                  360px;
+    width:                      100%;
+    max-height:                 640px;
+    height:                     100%;
     border:                     5px solid white;
     position:                   relative;
     margin:                     auto;
