--- a/files/work/11/PUK/css/main.css
+++ b/files/work/11/PUK/css/main.css
@@ -8,13 +8,13 @@
 body{ 
     background:                 black;
     color:                      white;
+    width:                      100%;
+    height:                     100%;
 }
 
 #borderBox{
-    max-width:                  360px;
-    width:                      100%;
-    max-height:                 640px;
-    height:                     100%;
+    width:                      360px;
+    height:                     640px;
     border:                     5px solid white;
     position:                   relative;
     margin:                     auto;
