--- a/files/work/11/PUK/css/main.css
+++ b/files/work/11/PUK/css/main.css
@@ -8,13 +8,13 @@
 body{ 
     background:                 black;
     color:                      white;
-    width:                      100%;
-    height:                     100%;
+    width:                      80%;
+    height:                     80%;
 }
 
 #borderBox{
-    max-width:                      360px;
-    max-height:                     640px;
+    width:                      360px;
+    height:                     640px;
     border:                     5px solid white;
     position:                   relative;
     margin:                     auto;
@@ -23,8 +23,8 @@ body{
 }
 
 #gameBox{
-    max-width:                      360px;
-    max-height:                     640px;
+    width:                      360px;
+    height:                     640px;
     position:                   relative;
     background:                 orangered;
     overflow:                   hidden;
@@ -32,8 +32,8 @@ body{
 }
 
 #scoreBox{
-    max-width:                      340px;
-    max-height:                     20px;
+    width:                      340px;
+    height:                     20px;
     font-family:                verdana;
     font-size:                  15px;
     font-weight:                bold;
@@ -48,8 +48,8 @@ body{
 }
 
 #targetsHitBox{
-    max-width:                      340px;
-    max-height:                     20px;
+    width:                      340px;
+    height:                     20px;
     font-family:                verdana;
     font-size:                  15px;
     font-weight:                bold;
@@ -64,8 +64,8 @@ body{
 }
 
 #levelBox{
-    max-width:                      340px;
-    max-height:                     20px;
+    width:                      340px;
+    height:                     20px;
     font-family:                verdana;
     font-size:                  15px;
     font-weight:                bold;
@@ -80,8 +80,8 @@ body{
 }
 
 #titlePukBox{
-    max-width:                      50px;
-    max-height:                     50px;
+    width:                      50px;
+    height:                     50px;
     border-radius:              50%;
     border:                     8px solid white;
     position:                   absolute;
@@ -92,8 +92,8 @@ body{
 }
 
 #titlePukInnerBox{
-    max-width:                      50px;
-    max-height:                     50px;
+    width:                      50px;
+    height:                     50px;
     border-radius:              50%;
     border:                     8px solid white;
     position:                   absolute;
@@ -104,8 +104,8 @@ body{
 }
 
 #titleBox{
-    max-width:                      200px;
-    max-height:                     85px;
+    width:                      200px;
+    height:                     85px;
     padding:                    0px;
     margin:                     0px;
     font-family:                verdana;
@@ -121,8 +121,8 @@ body{
 }
 
 #returnToTitleBox{
-    max-width:                      75px;
-    max-height:                     75px;
+    width:                      75px;
+    height:                     75px;
     padding:                    0px;
     margin:                     0px;
     background:                 white;
@@ -143,8 +143,8 @@ body{
 }
 
 #ndBox{
-    max-width:                      75px;
-    max-height:                     75px;
+    width:                      75px;
+    height:                     75px;
     padding:                    0px;
     margin:                     0px;
     background:                 white;
@@ -181,8 +181,8 @@ body{
 }
 
 #instructionsBox{
-    max-width:                      360px;
-    max-height:                     640px;
+    width:                      360px;
+    height:                     640px;
     padding:                    0px;
     margin:                     0px;
     font-family:                verdana;
@@ -210,8 +210,8 @@ body{
 }
 
 #gameOverBox{
-    max-width:                      360px;
-    max-height:                     400px;
+    width:                      360px;
+    height:                     400px;
     padding:                    0px;
     margin:                     0px;
     font-family:                verdana;
@@ -230,8 +230,8 @@ body{
 }
 
 #replayBox{
-    max-width:                      350px;
-    max-height:                     80px;
+    width:                      350px;
+    height:                     80px;
     padding:                    0px;
     margin:                     0px;
     font-family:                verdana;
@@ -248,8 +248,8 @@ body{
 }
 
 .targets{
-    max-width:                      100px;
-    max-height:                     100px;
+    width:                      100px;
+    height:                     100px;
     border-radius:              50%;
     background:                 white;
     position:                   absolute;
@@ -257,8 +257,8 @@ body{
 }
 
 #lineLeftBox{
-    max-width:                      0px;
-    max-height:                     5px;
+    width:                      0px;
+    height:                     5px;
     background:                 white;
     position:                   absolute;
     top:                        545px;
@@ -268,8 +268,8 @@ body{
 }
 
 #lineRightBox{
-    max-width:                      0px;
-    max-height:                     5px;
+    width:                      0px;
+    height:                     5px;
     background:                 white;
     position:                   absolute;
     top:                        545px;
@@ -280,8 +280,8 @@ body{
 }
 
 #pukBox{
-    max-width:                      50px;
-    max-height:                     50px;
+    width:                      50px;
+    height:                     50px;
     border-radius:              50%;
     border:                     5px solid white;
     background:                 rgba(0,0,0,0);
