--- a/files/work/11/PUK/css/main.css
+++ b/files/work/11/PUK/css/main.css
@@ -10,6 +10,7 @@ body{
     color:                      white;
     width:                      80%;
     height:                     80%;
+    margin:                     5px auto;
 }
 
 #borderBox{
